--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path "plastic-bottle.jpg" %>');">
+  <div class="banner-content">
+    <h1>Ecofriendly habits for a better tomorrow</h1>
+    <div class="call-to-action-banner">
+      <p>Change your habits by taking the EcoPledge</p>
+      <p><i class="fas fa-caret-down"></i></p>
+    </div>
+  </div>
+</div>
