--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -44,6 +44,7 @@
       <%= link_to "Get Involved", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Contact Us", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <button type="button" class="btn btn-primary btn-translation">中</button>
     <% end %>
   </div>
 
