--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TODO</title>
+    <title>HeroesToo - Take The EcoPledge Today!</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700,700i" rel="stylesheet">
