js script event listener works

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,6 +9,7 @@
       <p><a href="#">HeroesToo</a></p>
       <p><a href="#">FAQ</a></p>
       <p><a href="#">Team</a></p>
+      <p><a href="#">Past Programs</a></p>
     </div>
     <div class="about-links">
       <h5>Get Involved</h5>
