--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,10 +9,10 @@
     <div class="col-xs-12 col-sm-8 about-explanation">
       <p>HeroesToo Foundation is a registered Hong Kong charity established in July 2010 dedicated to restoring and protecting our environment.</p>
       <p>By engaging and empowering the public through school, community, and corporate programmes, we believe each and every one of us has the power to take action and save the planet.</p>
-      <hr>
+      <hr style="opacity: .3">
       <p>We support the UN Global Citizen Campaign to achieve the UN’s Global Goals to take action on sustainability, global health and climate change.</p>
       <p>We are an affiliate member of the Hong Kong Business Environment Council engaging with various stakeholders in promoting Hong Kong’s environmental sustainability.</p>
-      <hr>
+      <hr style="opacity: .3">
       <p>Our HeroesToo EcoPledge Education Program enables us to successfully collaborate with schools, reaching out to students with our holistic ‘whole school’ sustainable lifestyle education process enabling eco-friendly habits to be formed.</p>
       <p>With the EcoPledge Education Program and the individual EcoPledge action, we educate, empower and connect individuals and institutions to create new habits, reducing waste of the earth’s resources, enabling a lasting response to environmental threats. We channel this collective energy to make meaningful impact in saving our environment.</p>
       <p>We can expand our Programmes to make the impact needed now only with much needed funding from from businesses and institutions.</p>
@@ -21,15 +21,23 @@
     </div>
     <div class="col-xs-12 col-sm-4 about-links">
       <ul>
-        <li><a href="#" style="color:white; font-size: 18px;">Our Team</a></li>
-        <li><a href="#" style="color:white; font-size: 18px;">Our Ambassadors</a></li>
-        <li><a href="#" style="color:white; font-size: 18px;">Contact Us</a></li>
+        <li><h5>Read More:</h5></li>
+        <li><p style="color:lightgray; font-size: 18px;" id="our-team">Our Team</p></li>
+        <li><a href="#" style="color:lightgray; font-size: 18px;">Our Ambassadors</a></li>
+        <li><a href="#" style="color:lightgray; font-size: 18px;">Contact Us</a></li>
       </ul>
       <h5 style="text-align: center; padding-top: 60px;">Help us to keep growing!</h5>
       <button type="button" class="btn btn-sm btn-involved" style="position: static !important; color: #4886c1; display: block; margin: 0 auto;">Donate</button>
     </div>
   </div>
 </div>
+
+<script>
+  document.querySelector("#our-team").addEventListener("mouseup", function() {
+    let ourTeam = document.querySelector(".about-explanation")
+    ourTeam.innerHTML = " <h3 {text-align: center;}>Directors</h3> <h4>Raymond Yap</h4> <h5>Founder & CEO HeroesToo Foundation</h5> <p>Raymond Yap spent 30 years in business, primarily heading up the European operations for Wong’s International Ltd., a major electronics manufacturing group listed in Hong Kong. He also worked with Mondex, part of the Mastercard suite of smart card companies. Raymond opted for early retirement before emigrating to Vancouver in 1991 to enjoy life and spend more time with his family. In 2003, he was diagnosed with melanoma, an aggressive form of skin cancer and subsequently underwent life-saving surgery. This proved to be a cathartic experience, leading from concern for his family, particularly his young grandchildren, to a realization that the best way to safeguard their future was to protect the environment. Eager to create lasting change, Raymond came out of retirement and applied his business acumen and experience to founding and running HeroesToo Foundation. He is an affiliate member of the Hong Kong Business Environment Council.</p> <p>E-mail: <a {color: white;}> raymond@heroestoo.com</a></p> <p {text-decoration: none}>Phone: (852) 6403-0208</p><hr {opacity: .3;}>"
+  });
+</script>
 
 
 
