--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -33,6 +33,7 @@
 @media only screen and (max-width: 600px) {
     .footer-links {
       border-right: hidden;
+      border-top: none !important;
     }
 }
 
