--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,7 +72,7 @@
           <div class="card-description">
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
           </div>
-          <button type="button" class="btn btn-success btn-sm btn-involved" style="border-radius: 2px !important;">Join</button>
+          <button type="button" class="btn btn-success btn-sm btn-involved" style="border-radius: 2px !important;">Take the EcoPledge!</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
