tons of styling

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer" id="footer-contact">
   <div class="logo-slogan">
     <%= image_tag "logo-heroestoo-footer.png", height: 150 %>
     <p>Ecofriendly habits for a better tomorrow</p>
