--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Home", root_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "About", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "What We Do", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Contact Us", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "What We Do", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Contact Us", "#footer-contact", class: "navbar-wagon-item navbar-wagon-link" %>
 
 
       <!-- Avatar with dropdown menu -->
@@ -42,10 +42,10 @@
       <button type="button" class="btn btn-primary btn-translation">中</button>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Home", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Home", root_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "About", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "What We Do", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Contact Us", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "What We Do", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Contact Us", "#footer-contact", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <button type="button" class="btn btn-primary btn-translation">中</button>
     <% end %>
