--- a/app/assets/stylesheets/pages/_wwd.scss
+++ b/app/assets/stylesheets/pages/_wwd.scss
@@ -9,6 +9,7 @@
   width: 280px;
   height: 370px;
   position: relative;
+  margin-top: 20px;
   -webkit-box-shadow: 3px 3px 14px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 3px 3px 14px -4px rgba(0,0,0,0.75);
   box-shadow: 3px 3px 14px -4px rgba(0,0,0,0.75);
