--- a/app/assets/stylesheets/pages/_ecopledge.scss
+++ b/app/assets/stylesheets/pages/_ecopledge.scss
@@ -1,3 +1,62 @@
 .ecopledge-background {
-  background-color: #95d426;
+  background-color: white;
+}
+
+.ecopledge-collective {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  background-color: #4886c1;
+  img {
+    height: 275px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  p {
+    font-size: 15px;
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
+.ecopledge-individual {
+  height: 100vh;
+  background-color: #95e58a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  img {
+    height: 275px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  p {
+    font-size: 15px;
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
+.form-control {
+  border-radius: 20px !important;
+  background-color: #ccc;
+}
+
+.ecopledge-form {
+  background-color: white;
+  color: #4886c1;
+  text-align: center;
+  h2 {
+    font-size: 30px;
+  }
+  p {
+    font-size: 15px;
+  }
 }
