--- a/app/views/pages/ecopledge.html.erb
+++ b/app/views/pages/ecopledge.html.erb
@@ -1,19 +1,39 @@
 <div class="ecopledge-background">
-  <h2>Sign up</h2>
-
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
-
-    <div class="form-inputs">
-      <%= f.input :email, required: true, autofocus: true %>
-      <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-      <%= f.input :password_confirmation, required: true %>
+  <div class="row">
+    <div class="col-xs-12 col-md-6 ecopledge-individual">
+      <div class="ecopledge-content" style="padding: 0 30px;">
+        <%= image_tag "ecopledge-platform-04-04.png" %>
+        <h2>EcoPledge Individual</h2>
+        <p>The Ecopledge Collective platform is for organizations and schools that are looking to cut down their environmental footprint.</p><br><p>Participating entities can make an EcoPledge and track their progress monthly.</p>
+      </div>
     </div>
-
-    <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+    <div class="col-xs-12 col-md-6 ecopledge-collective">
+      <div class="ecopledge-content" style="padding: 0 30px;">
+        <%= image_tag "ecopledge-platforms-01.png" %>
+        <h2>EcoPledge Collective</h2>
+        <p>The Ecopledge Collective platform is for organizations and schools that are looking to cut down their environmental footprint.</p><br><p>Participating entities can make an EcoPledge and track their progress monthly.</p>
+      </div>
     </div>
-  <% end %>
+  </div>
+  <div class="row">
+    <div class="ecopledge-form col-xs-12 col-md-4 col-md-offset-4">
+        <h2>We are currently developing.</h2>
+        <p>Sign up below to be among our first users:</p>
 
-  <%= render "devise/shared/links" %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+
+          <div class="form-inputs">
+            <%= f.input :organization, required: true %>
+            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+            <%= f.input :password_confirmation, required: true %>
+          </div>
+
+          <div class="form-actions">
+            <%= f.button :submit, "Take the EcoPledge" %>
+          </div>
+        <% end %>
+    </div>
+  </div>
 </div>
