--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
   </div>
   <div class="ecopledge-cta">
     <h5>ARE YOU A SCHOOL, ORGANIZATION, OR INDIVIDUAL?</h5>
-    <button type="button" class="btn btn-success btn-lg">Take the EcoPledge</button>
+    <%= link_to '<button type="button" class="btn btn-success btn-lg">Take the EcoPledge</button>'.html_safe, ecopledge_path %>
   </div>
 </div>
 <div class="banner-two" style="background-image: linear-gradient(-225deg, rgba(255,255,255,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path "teamwork.jpg" %>'); height: auto !important;">
