--- a/app/views/pages/wwd.html.erb
+++ b/app/views/pages/wwd.html.erb
@@ -52,7 +52,7 @@
             <span><h3>HeroesToo Reforestation Program</h3></span>
           </div>
           <div class="card-two-description">
-            <span><p>Our tree-planting program was initiated on 27th July 2010.</p></span>
+            <span><p>Our tree-planting program was initiated on the 27th of July 2010.</p></span>
           </div>
           <div class="card-two-readmore">
             <span id="ht-reforestation-program"><a href="#program-info">READ MORE</a></span>
