--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,8 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :type, required: true, collection: ["Collective", "Individual"] %>
+    <%= f.input :name, required: true %>
     <%= f.input :organization, required: true %>
     <%= f.input :email, required: true, autofocus: true %>
 
