--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,7 +60,7 @@
           <div class="card-description">
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
           </div>
-          <button type="button" class="btn btn-primary btn-sm btn-involved">Donate</button>
+          <%= link_to '<button type="button" class="btn btn-primary btn-sm btn-involved">Donate</button>'.html_safe, contact_us_path %>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
@@ -84,7 +84,7 @@
           <div class="card-description">
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
           </div>
-          <button type="button" class="btn btn-primary btn-sm btn-involved">Volunteer</button>
+          <%= link_to '<button type="button" class="btn btn-primary btn-sm btn-involved">Volunteer</button>'.html_safe, contact_us_path %>
         </div>
       </div>
     </div>
