--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "Home", root_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "About", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "What We Do", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Contact Us", "#footer-contact", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Contact Us", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
 
       <!-- Avatar with dropdown menu -->
@@ -23,7 +23,7 @@
       <%= link_to "Home", root_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "About", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "What We Do", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Contact Us", "#footer-contact", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Contact Us", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <button type="button" class="btn btn-primary btn-translation">中</button>
     <% end %>
   </div>
@@ -33,9 +33,10 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><%= link_to "Home", root_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+        <li><%= link_to "About", about_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+        <li><%= link_to "What We Do", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+        <li><%= link_to "Contact Us", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
       </ul>
     </div>
   </div>
