minor changes made

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -17,7 +17,7 @@
       <p><a><%= link_to "Our Programs", whatwedo_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Volunteer", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
       <p><a><%= link_to "Sponsor Us", contact_us_path, class: "navbar-wagon-item navbar-wagon-link" %></a></p>
-      <%= link_to '<button style="margin: 0 20px; type="button" class="btn btn-primary btn-xs">Donate</button>'.html_safe, contact_us_path %>
+      <%= link_to '<button style="margin: 0 20px; type="button" class="btn btn-primary">Donate</button>'.html_safe, contact_us_path %>
     </div>
   </div>
   <div class="map-social-icons">
