--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "icons-07.png" %>
         <h4>250</h4>
-        <p>Electricity saved</p>
+        <p>Kilowatts of electricity saved</p>
       </div>
       <div class="col-xs-12 col-sm-2">
         <%= image_tag "icons-08.png" %>
@@ -61,6 +61,7 @@
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
           </div>
           <%= link_to '<button type="button" class="btn btn-primary btn-sm btn-involved">Donate</button>'.html_safe, contact_us_path %>
+          <%= image_tag "donate.png", height: 60, style: "position: absolute; bottom: 10px; right: 10px;" %>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
