--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
-  height: 70px;
+  height: 110px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -12,9 +12,8 @@
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 150px;
+  height: 100px;
   position: relative;
-  top: 50px;
   z-index: 10;
 }
 
@@ -52,7 +51,7 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #4886c1;
+  color: #66CCFF;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
