--- a/app/assets/stylesheets/pages/_ecopledge.scss
+++ b/app/assets/stylesheets/pages/_ecopledge.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   color: white;
   text-align: center;
-  background-color: #4886c1;
+  background-color: #66CCFF;
   img {
     height: 275px;
   }
@@ -25,7 +25,7 @@
 
 .ecopledge-individual {
   height: 100vh;
-  background-color: #95e58a;
+  background-color: #98D973;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +51,7 @@
 
 .ecopledge-form {
   background-color: white;
-  color: #4886c1;
+  color: #66CCFF;
   text-align: center;
   h2 {
     font-size: 30px;
