--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .ecopledge-explanation {
-  background: #4886c1;
+  background: #66CCFF;
   text-align: center;
   color: white;
   h2 {
