--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,17 +8,19 @@
   <div class="row about-content">
     <div class="col-xs-12 col-sm-8 about-explanation">
       <h3 style="text-align: center;"">About Us</h3><br>
-      <p>HeroesToo Foundation is a registered Hong Kong charity established in July 2010 dedicated to restoring and protecting our environment.</p>
-      <p>By engaging and empowering the public through school, community, and corporate programmes, we believe each and every one of us has the power to take action and save the planet.</p>
+      <p>HeroesToo is a registered Hong Kong charity established in July 2010, dedicated to restoring and protecting our environment.</p>
+      <p>We achieve our mission through the EcoPledge Program, engaging and empowering the community to take action.</p>
       <hr style="opacity: .3">
-      <p>We support the UN Global Citizen Campaign to achieve the UN’s Global Goals to take action on sustainability, global health and climate change.</p>
-      <p>We are an affiliate member of the Hong Kong Business Environment Council engaging with various stakeholders in promoting Hong Kong’s environmental sustainability.</p>
+      <p>We support the UN Global Citizen Campaign, to achieve the UN&#39;s Global Goals taking action on sustainability, global health, and climate change.</p>
+      <p>We are an affiliate member of the Hong Kong Business Environment Council, engaging with various stakeholders in promoting Hong Kong's environmental sustainability.</p>
+      <div class="about-images">
+        <%= image_tag "sustainability-goals.png"%>
+        <%= image_tag "biz-environmental-council.png"%>
+        <%= image_tag "HK-council-social-service.png"%>
+      </div>
       <hr style="opacity: .3">
-      <p>Our HeroesToo EcoPledge Education Program enables us to successfully collaborate with schools, reaching out to students with our holistic ‘whole school’ sustainable lifestyle education process enabling eco-friendly habits to be formed.</p>
-      <p>With the EcoPledge Education Program and the individual EcoPledge action, we educate, empower and connect individuals and institutions to create new habits, reducing waste of the earth’s resources, enabling a lasting response to environmental threats. We channel this collective energy to make meaningful impact in saving our environment.</p>
-      <p>We can expand our Programmes to make the impact needed now only with much needed funding from from businesses and institutions.</p>
-      <br>
-      <h4><b>We are running out of time!</b></h4>
+      <p>Our HeroesToo EcoPledge Education Program inspires and empowers the community, to engage in eco-friendly habits to bring about a sustainable world.</p>
+      <p>We aspire to expand our outreach eco-education Program but to create the impact needed to undo the damage done and achieve our goals- - We need your support.</p>
     </div>
     <div class="col-xs-12 col-sm-4 about-links">
       <ul>
@@ -37,7 +39,7 @@
 <script>
     document.querySelector("#about-us").addEventListener("mouseup", function() {
     let ourTeam = document.querySelector(".about-explanation")
-    ourTeam.innerHTML = "<h3 {text-align: center;}>About Us<br></h3> <p>HeroesToo Foundation is a registered Hong Kong charity established in July 2010 dedicated to restoring and protecting our environment.</p><p>By engaging and empowering the public through school, community, and corporate programmes, we believe each and every one of us has the power to take action and save the planet.</p><hr {opacity: .3;}><p>We support the UN Global Citizen Campaign to achieve the UN’s Global Goals to take action on sustainability, global health and climate change.</p><p>We are an affiliate member of the Hong Kong Business Environment Council engaging with various stakeholders in promoting Hong Kong’s environmental sustainability.</p><hr {opacity: .3}><p>Our HeroesToo EcoPledge Education Program enables us to successfully collaborate with schools, reaching out to students with our holistic ‘whole school’ sustainable lifestyle education process enabling eco-friendly habits to be formed.</p><p>With the EcoPledge Education Program and the individual EcoPledge action, we educate, empower and connect individuals and institutions to create new habits, reducing waste of the earth’s resources, enabling a lasting response to environmental threats. We channel this collective energy to make meaningful impact in saving our environment.</p><p>We can expand our Programmes to make the impact needed now only with much needed funding from from businesses and institutions.</p><br><h5>We are running out of time.</h5>"
+    ourTeam.innerHTML = "<h3 {text-align: center;}>About Us<br></h3> <p>HeroesToo is a registered Hong Kong charity established in July 2010, dedicated to restoring and protecting our environment.</p><p>We achieve our mission through the EcoPledge Program, engaging and empowering the community to take action.</p><hr {opacity: .3;}><p>We support the UN Global Citizen Campaign, to achieve the UN&#39;s Global Goals taking action on sustainability, global health, and climate change.</p><p>We are an affiliate member of the Hong Kong Business Environment Council, engaging with various stakeholders in promoting Hong Kong's environmental sustainability.</p><hr {opacity: .3}><p>Our HeroesToo EcoPledge Education Program inspires and empowers the community, to engage in eco-friendly habits to bring about a sustainable world.</p><p>We aspire to expand our outreach eco-education Program but to create the impact needed to undo the damage done and achieve our goals- - We need your support.</p>"
   });
 
   document.querySelector("#our-team").addEventListener("mouseup", function() {
