--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,255,0.4) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path "plastic-bottle.jpg" %>');">
   <div class="banner-content">
-    <h1>Ecofriendly habits for a better tomorrow</h1>
+    <h1>A Hero Today, A World of Difference Tomorrow</h1>
     <div class="call-to-action-banner">
       <p>Change your habits by taking the EcoPledge</p>
       <p><i class="fas fa-caret-down"></i></p>
@@ -10,13 +10,12 @@
 <div class="ecopledge-explanation">
   <div class="ecopledge-text">
     <h2>The EcoPledge</h2>
-    <p>Designed to engage and develop our children into environmentally-responsible
-  citizens to care enough to protect and improve the world they live in. Within the next 5 years, we want 500 schools, 250,000 students and 500,000 parents in Hong Kong to take our EcoPledge</p>
+    <p>A personal pledge engaging each individual to take action and make a promise to lessen their individual carbon footprint, by reducing their use of the Earth’s natural resources.</p>
   </div>
   <div class="ecopledge-content">
     <div class="row">
       <div class="col-xs-12 col-sm-2 col-sm-offset-1">
-        <%= image_tag "icons-04.png" %>
+        <%= image_tag "icons-09-01.png" %>
         <h4>5,000</h4>
         <p>Reams of paper recycled</p>
       </div>
@@ -26,7 +25,7 @@
         <p>Plastic bottles recycled</p>
       </div>
       <div class="col-xs-12 col-sm-2">
-        <%= image_tag "icons-06.png" %>
+        <%= image_tag "ecopledge-logo-01.png" %>
         <h4>152</h4>
         <p>Organizations taking the EcoPledge</p>
       </div>
@@ -44,7 +43,7 @@
   </div>
   <div class="ecopledge-cta">
     <h5>ARE YOU A SCHOOL, ORGANIZATION, OR INDIVIDUAL?</h5>
-    <%= link_to '<button type="button" class="btn btn-success btn-lg">Take the EcoPledge</button>'.html_safe, ecopledge_path %>
+    <%= link_to '<button type="button" class="btn btn-primary btn-lg" style="border: 1px solid rgba(255, 255, 255, .5);">Take the EcoPledge NOW</button>'.html_safe, ecopledge_path %>
   </div>
 </div>
 <div class="banner-two" style="background-image: linear-gradient(-225deg, rgba(255,255,255,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path "teamwork.jpg" %>'); height: auto !important;">
@@ -55,11 +54,11 @@
         <div class="card" style="background: rgba(0,0,0,.8);">
           <div class="card-title">
             <h3>Make a Donation</h3>
-            <p>Every dollar makes a difference</p>
+            <p>Every dollar goes toward reducing our carbon footprint.</p>
           </div>
-          <div class="card-description">
+<!--           <div class="card-description">
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
-          </div>
+          </div> -->
           <%= link_to '<button type="button" class="btn btn-primary btn-sm btn-involved">Donate</button>'.html_safe, contact_us_path %>
           <%= image_tag "donate.png", height: 60, style: "position: absolute; bottom: 10px; right: 10px;" %>
         </div>
@@ -68,11 +67,11 @@
         <div class="card" style="background: rgba(0,0,0,.8);">
           <div class="card-title">
             <h3>Take the Ecopledge</h3>
-            <p>Your organization can be the change</p>
+            <p>You can be the change!</p>
           </div>
-          <div class="card-description">
+    <!--       <div class="card-description">
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
-          </div>
+          </div> -->
           <%= link_to '<button type="button" class="btn btn-success btn-sm btn-involved" style="border-radius: 2px !important;">Take the EcoPledge!</button>'.html_safe, ecopledge_path %>
         </div>
       </div>
@@ -80,11 +79,11 @@
         <div class="card" style="background: rgba(0,0,0,.8);">
           <div class="card-title">
             <h3>Volunteer</h3>
-            <p>We are always looking for people to help out!</p>
+            <p>Make a greener world!</p>
           </div>
-          <div class="card-description">
+<!--           <div class="card-description">
             <p>Lorem ipsum dolor sit amet, ad hinc malorum gloriatur vim, no mucius praesent evertitur eam, dolor veniam</p>
-          </div>
+          </div> -->
           <%= link_to '<button type="button" class="btn btn-primary btn-sm btn-involved">Volunteer</button>'.html_safe, contact_us_path %>
         </div>
       </div>
