--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer" id="footer-contact">
   <div class="logo-slogan">
-    <%= image_tag "logo-heroestoo-footer.png", height: 150 %>
-    <p>Ecofriendly habits for a better tomorrow</p>
+    <%= image_tag "Heroes-Too-Logo-01.png", height: 200 %>
+    <p>A Hero Today, A World of Difference Tomorrow</p>
   </div>
   <div class="footer-links">
     <div class="abt-links">
