--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,7 +11,7 @@
   text-align: center;
   padding-bottom: 50px;
   p {
-    color: #4886c1;
+    color: #66CCFF;
     font-size: 15px;
   }
 }
@@ -45,7 +45,7 @@
 
 .map-social-icons {
   flex: 0 0 300px;
-  color: #4886c1;
+  color: #66CCFF;
   img {
     height: 170px;
     margin-bottom: 20px;
