--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #66CCFF;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #95d426;
+$green: #98D973;
 $gray: #000000;
 $light-gray: #e6e7e8;
