--- a/app/assets/stylesheets/pages/_wwd.scss
+++ b/app/assets/stylesheets/pages/_wwd.scss
@@ -1,5 +1,5 @@
 .heroestoo-programs {
-  background-color: #4886c1;
+  background-color: #66CCFF;
   height: auto;
   padding: 60px 40px;
 }
@@ -29,7 +29,7 @@
   left: 10px;
   h3 {
     font-size: 23px;
-    color: #4886c1;
+    color: #66CCFF;
   }
 }
 
@@ -39,7 +39,7 @@
   left: 10px;
   p {
     font-size: 13px;
-    color: #4886c1;
+    color: #66CCFF;
   }
 }
 
