--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo-heroestoo.png", height: 100 %>
+    <%= image_tag "Heroes-Too-Logo-01.png", height: 100 %>
   <% end %>
 
   <!-- Right Navigation -->
