--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,28 +2,41 @@
   <h3>There are many ways that you can support us! Get in contact and let's start a conversation.</h3>
   <div class="row about-content">
     <div class="col-xs-12 col-sm-8 about-explanation">
-      <h3 style='text-align: center;'>Contact Us</h3><br><h4>Hong Kong Headquarters & Office Address</h4><h5>Telephone number: +852 24610208</h5><h5>E-mail (for general inquiries):<a style= 'color: white;' href='mailto:raymond@heroestoo.com'> raymond@heroestoo.com</a></h5>
+      <h3 style='text-align: center;'>Contact Us</h3><br><h4>Raymond Yap CEO</h4><h4>HeroesToo</h4><h4>S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><h5>Telephone number: +852 64030208</h5><h5>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></h5>
     </div>
     <div class="col-xs-12 col-sm-4 about-links">
       <ul>
         <li><h5>Read More:</h5></li>
-        <li><a href="#content-top" style="color:lightgray; font-size: 18px;" id="contactus">Contact Us</a></li>
-        <li><a href="#content-top" style="color:lightgray; font-size: 18px;" id="donations">Donate</a></li>
+        <li><a href="#content-top" style="color:#fbfbfb; font-size: 18px;" id="contactus">Contact Us</a></li>
+        <li><a href="#content-top" style="color:#fbfbfb; font-size: 18px;" id="supporters">Support Us</a></li>
+        <li><a href="#content-top" style="color:#fbfbfb; font-size: 18px;" id="donations">Donate</a></li>
       </ul>
     </div>
   </div>
 </div>
 
+
+
 <script>
 
   document.querySelector("#contactus").addEventListener("mouseup", function() {
     let ourTeam = document.querySelector(".about-explanation")
-    ourTeam.innerHTML = "<h3 style='text-align: center;'>Contact Us</h3><br><h4>Hong Kong Headquarters & Office Address</h4><h5>Telephone number: +852 24610208</h5><h5>E-mail (for general inquiries):<a style= 'color: white;' href='mailto:raymond@heroestoo.com'> raymond@heroestoo.com</a></h5>"
+    ourTeam.innerHTML = "<h3 style='text-align: center;'>Contact Us</h3><br><h4>Raymond Yap CEO</h4><h4>HeroesToo</h4><h4>S606 PMQ</h4><h4>35 Aberdeen Street</h4><h4>Hong Kong</h4><h5>Telephone number: +852 64030208</h5><h5>E-mail:<a style= 'color: white;' href='mailto:info@heroestoo.com'> info@heroestoo.com</a></h5>"
   });
+
+  document.querySelector("#supporters").addEventListener("mouseup", function() {
+    let ourTeam = document.querySelector(".about-explanation")
+    ourTeam.innerHTML = "<h3 style='text-align: center;'>Our Supporters</h3><br><p>From our early days, we are privileged to have had a variety of supporters and collaborators to help us pursue our goals. Our sincere thanks to those individuals, companies and institutions who have contributed in helping us make our “home” a more environmentally friendly and sustainable place to live.</p><img src='https://res.cloudinary.com/dofuzeof4/image/upload/v1535125609/suez_ztomon.png' alt='Suez' style='max-width: 200px; margin: 10px;'><img src='https://res.cloudinary.com/dofuzeof4/image/upload/v1535125609/whitehole_oxgkrj.png' alt='Whitehole' style='max-width: 100px; margin: 10px;'><img src='https://res.cloudinary.com/dofuzeof4/image/upload/v1535125608/aberdeen_vgs8bh.png' alt='Aberdeen' style='max-width: 200px; margin: 10px;'><img src='https://res.cloudinary.com/dofuzeof4/image/upload/v1535125608/swire_rtrgdm.png' alt='Swire' style='max-width: 200px; margin: 10px;'><p>HeroesToo needs your support to expand our EcoPledge Education campaign to more schools and create the critical mass to reduce our carbon footprint.</p><p>Our goal is a globally connected community of schools and institutions with the same eco-vision and objectives. Imagine thousands of schools and businesses united in action to create a domino effect for behavioural change, with every student and individual in these schools and institutions spreading the message in their communities!</p><p>The HeroesToo management keeps overheads minimal to ensure donations go to the heart of our cause which is to provide global environmental education, create community awareness and knowledge of how to take collaborative positive action to save our world from needless waste and destruction.</p><p>Along with the founder, we are comprised of a committed team of management and a board of advisors who share our global vision and serve without pay. We have two part-time facilitators, one of whom doubles up as an administrator and we work with student interns. Office space is donated whilst administration costs are kept to a bare minimum. Over 80% of our donations are used directly for our EcoPledge Education Program, the facilitators and the class outings for students to learn pro-actively about caring for the environment.</p>"
+  });
+
+
+
 
   document.querySelector("#donations").addEventListener("mouseup", function() {
     let ourTeam = document.querySelector(".about-explanation")
-    ourTeam.innerHTML = "<h3 style='text-align: center;'>Donations</h3><br><p>HeroesToo Foundation needs your support to make our meaningful EcoPledge education campaign bigger and better.</p><p>Every dollar donated to our EcoPledge Education Program enables us to expand the programme to more schools and reach out to students to educate and activate them to play their role in becoming eco-heroes.</p><p>Our objective is a globally connected community of schools with the same vision and objective. Imagine thousands of schools joined to create the tipping point for behavioral changes and every single one of the students in these schools spreading the message in their communities!</p><p>The HeroesToo Foundation management keeps overheads minimal to ensure donations go to the heart of our cause and vision: providing global sustainable environmental education and creating crowd awareness and the knowledge of how to take positive action together to save our world from needless waste.</p><p>Along with the founder, we are comprised of committed management and a board of advisors who share our global vision and serve without pay. We have two part-time facilitators one of whom doubles up as admin staff and we work with student interns. Office space is donated whilst administration costs are kept to a bare minimum. Over 80% of our donations are used directly for our EcoPledge Program for the facilitators and class outings for students to learn hands-on about caring for the environment.</p><br><br><h4>CHEQUE: Please make your cheque payable to “HeroesToo Foundation” and mail to the attention of:</h4><p style='padding-left: 20px;'>Mr. Raymond Yap</p><p style='padding-left: 20px;'>CEO</p><p style='padding-left: 20px;'>The HeroesToo Foundation</p><p style='padding-left: 20px;'>1205 Harvest Building, 29-37 Wing Kut Street, Central, Hong Kong</p><p>To save paper, please provide us with a forwarding address if you require a receipt. As a registered charity, your donation is tax-deductible.</p><br><h4>ATM TRANSFER: Please call us for banking details.</h4>"
+    ourTeam.innerHTML = "<h3 style='text-align: center;'>Donations</h3><br><br><h4>CHEQUE: Please make your cheque payable to “HeroesToo Foundation” and post to:</h4><p style='padding-left: 20px;'>Mr. Raymond Yap</p><p style='padding-left: 20px;'>CEO</p><p style='padding-left: 20px;'>HeroesToo Ltd.</p><p style='padding-left: 20px;'>S606 PMQ</p><p style='padding-left: 20px;'>35 Aberdeen Street Central</p><p style='padding-left: 20px;'>Hong Kong</p><p>To save paper a receipt will only be sent upon request. If you do, please provide us with a forwarding address.  As we are a registered Hong Kong charity your donation is tax-deductible.</p><br><h4>ATM TRANSFER: Please call us for banking details.</h4>"
   });
+
+
 
 </script>
