--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,9 +22,9 @@
   </div>
   <div class="map-social-icons">
     <%= image_tag "map-placeholder.jpg", height: 100 %>
-    <p><i class="fas fa-map-marker"></i> Harvest Building, 29 – 35 Wing Kut Street, Central, Hong Kong</p>
+    <p><i class="fas fa-map-marker"></i> HeroesToo, S606 PMQ, 35 Aberdeen Street, Hong Kong</p>
     <p><i class="fas fa-envelope"></i> <a href="mailto:info@heroestoo.com">info@heroestoo.com</a></p>
-    <p><i class="fas fa-phone"></i> +852 24610208</p>
+    <p><i class="fas fa-phone"></i> +852 64030208</p>
     <hr style="border-color: rgba(0, 0, 0, .3);">
     <ul class="social-media">
       <li><a href="https://www.facebook.com/heroestoo"><i class="fab fa-facebook-square"></i></a></li>
