--- a/app/views/pages/wwd.html.erb
+++ b/app/views/pages/wwd.html.erb
@@ -1,6 +1,6 @@
 <div class="heroestoo-programs">
   <h2 style="text-align: center; color: white;">Our Programmes</h2>
-  <div class="row justify-content-between">
+  <div class="row">
     <div class="col-xs-12 col-sm-4" align="center">
       <div class="card-two">
         <div class="card-two-contents">
